--- a/software.html
+++ b/software.html
@@ -39,12 +39,42 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/ValtechNorthAmerica/743999698492356-junior-software-developer'>Valtech North America Junior Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/5e6ddbb2-d226-463d-b9a6-c2887bd76b05'>DrChrono - Director of Software Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498249002'>Job Application for Software Engineer at Alyvant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/9b403665-a50f-4e4a-ac2c-1458ad3d908a'>DrChrono - Software Engineer - Python/Django (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://unearthlabs.recruiterbox.com/jobs/fk0mcos'>
+    Mobile Software Engineer - android at Unearth
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/act-on-software/job/oNVsbfw5'>Act-On Software Careers - Sr. Software Engineer (Front-end)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://cerebralgroup.applytojob.com/apply/4GIjXEcweI/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/ValtechNorthAmerica/743999698492356-junior-software-developer'>Valtech North America Junior Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">North America Buffalo, NY</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498249002'>Job Application for Software Engineer at Alyvant</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698617351-software-engineer-c-net-angular-web-api'>Technology Navigators Software Engineer - C#/.NET, Angular, Web API | SmartRecruiters</a></h5> 
@@ -75,7 +105,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/software-engineer-edrs-m-f-d-ottobrunn-11994'>Software Engineer EDRS (m/f/d) in Ottobrunn - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -103,11 +133,11 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4373314002'>Job Application for Senior Software Engineer in Test at Unite Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4373314002'>Job Application for Senior Software Engineer in Test at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oT3YafwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nF28pMwv'>Freedom Financial Network Careers - Senior Software Engineer FDR</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oT3YafwO&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nF28pMwv'>Freedom Financial Network Careers - Senior Software Engineer FDR</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -123,7 +153,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698508963-senior-software-engineer-continuous-integration-infrastructure'>Square Senior Software Engineer, Continuous Integration Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -139,7 +169,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/1f33c8d9-b313-484c-aac0-a1974ede4979'>Kalo - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/1f33c8d9-b313-484c-aac0-a1974ede4979'>Kalo - Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -223,7 +253,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -255,7 +285,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -275,7 +305,7 @@
 <p><span class="badge badge-light">Tampa, FL Tampa, FL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oBFQafw0'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -307,7 +337,7 @@
 <p><span class="badge badge-light">Galway Galway</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698593568-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698593568-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -387,11 +417,11 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cerebralgroup.applytojob.com/apply/dzEPzYpZhd/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
+<h5><a href='http://cerebralgroup.applytojob.com/apply/dzEPzYpZhd/Software-Developer'>Software Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.securityclearedjobs.com/job/801894169/software-engineer/?TrackID=67024'>Software Engineer job with General Dynamics | 801894169</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.securityclearedjobs.com/job/801894169/software-engineer/?TrackID=67024'>Software Engineer job with General Dynamics | 801894169</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -409,38 +439,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698578794-software-developer-intern'>Broadsign Software Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://azaleahealth.applytojob.com/apply/pJ0OBLrwsA/Senior-Hospital-Software-Engineer'>Senior Hospital Software Engineer - Azalea Health - Career Page</a></h5> 
-<p><span class="badge badge-light">Atlanta, GA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.applythis.net/job/?a=821A86E18.0'>
-	
-    Apply for Senior Software Developer -  Greater Manchester, United Kingdom - IT and Internet - Seni-Pzljrp-Laura - Find a job, build a career
-
-</a></h5> 
-<p><span class="badge badge-light">Manchester, United Kingdom Manchester</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://www.sentenial.com/careers/senior-software-engineer/'>Senior Software Engineer, Ireland | Sentenial</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/smarkets/jobs/1485264'>Job Application for Software Engineer Graduates 2020 at Smarkets</a></h5> 
-<p><span class="badge badge-light">London London Los Angeles</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/smarkets/jobs/1920658'>Job Application for Software Engineering Internship 2020 at Smarkets</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/acommerce/jobs/1912812'>Job Application for Software Engineer at aCommerce</a></h5> 
-<p><span class="badge badge-light">Thailand Bangkok</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
